setTimout Popup in manager for publisch/unpublish/create/delete

--- a/assets/stylesheets/scss/_pard.erb.scss
+++ b/assets/stylesheets/scss/_pard.erb.scss
@@ -2772,6 +2772,9 @@ body.is-reveal-open{
   }
 }
 
+.OKalertTimeout{
+  color:  $green-pard;
+}
 
 /*==============================================
 ICONS
