checked all functions of the manager - everything OK

--- a/assets/stylesheets/scss/_pages.erb.scss
+++ b/assets/stylesheets/scss/_pages.erb.scss
@@ -2161,7 +2161,7 @@ Program Manager Tab
 }
 
 .proposal-title-card-call-manager{
-  line-height: 1rem;
+  line-height: .7rem;
   font-size: 0.75rem;
   margin-bottom: 0;
   a{
