--- a/assets/stylesheets/scss/_pard.erb.scss
+++ b/assets/stylesheets/scss/_pard.erb.scss
@@ -2420,7 +2420,7 @@ select:-moz-focusring { color: transparent;
 .short_description-input{
   line-height: 1.2rem;
   min-height: 0 !important;
-  height: 2.2rem !important;
+  height: 34px !important;
   overflow-y: hidden;
 }
 
@@ -2594,15 +2594,6 @@ select:-moz-focusring { color: transparent;
     }
   }
 
-  .createProfilePopup-organization .photoContainer{
-    /* @include breakpoint (large){
-      display: inline-block;
-      margin-left: 2rem;
-      margin-left: 6rem;
-      margin-top: 2rem;
-    } */
-  }
-
   .m-artistCall{
     font-size: 14px;
     float: right;
@@ -2624,35 +2615,16 @@ select:-moz-focusring { color: transparent;
   }
 }
 
-.MultipleSelector-FormField select, .MultipleDaysSelector-FormField select{
-  width: 100% !important;
-  outline: none !important;
-}
-
-.MultipleSelector-FormField .ms-choice, .MultipleDaysSelector-FormField .ms-choice{
-    @include border-radius($element-border-radius);
-    font-size: $almostNormalSize;
-    width: 100%;
-    height: 34px;
-    span{
-      padding: 4px 8px;
-    }
-    div{
-      top:  4px;
-    }
-}
-
-.MultipleSelector-FormField .ms-parent, .MultipleDaysSelector-FormField .ms-parent{
-    width: 100% !important;
-}
-
 .deleteProfile-caller{
   font-size: $smallSize;
 }
 
-.ms-parent{
-  width: 100% !important;
-} 
+.Selector-FormField{
+  select{
+    height: 34px;
+  }
+}
+
 
 /*==============================================
 POPUP
@@ -2974,7 +2946,9 @@ TOOLTIP
   z-index: 9999;
 }
 
-
+/*====================================== 
+Cockies
+========================================*/
 
 .coockies-callout{
   background-color: rgba(222, 222, 222, 0.9);
@@ -2999,3 +2973,52 @@ TOOLTIP
   }
 }
 
+/*====================================== 
+Multiple select 
+========================================*/
+
+
+.ms-choice > div {
+    background: url(<%= image_path 'multiple-select.png'  %>) left top no-repeat !important;
+}
+
+.ms-choice > div.open {
+    background: url(<%= image_path 'multiple-select.png'  %>) right top no-repeat !important;
+}
+
+
+.ms-search input {
+    background: #fff url(<%= image_path 'multiple-select.png'  %>) no-repeat 100% -22px !important;
+    background: url(<%= image_path 'multiple-select.png'  %>) no-repeat 100% -22px, -webkit-gradient(linear, left bottom, left top, color-stop(0.85, white), color-stop(0.99, #eeeeee)) !important;
+    background: url(<%= image_path 'multiple-select.png'  %>) no-repeat 100% -22px, -webkit-linear-gradient(center bottom, white 85%, #eeeeee 99%) !important;
+    background: url(<%= image_path 'multiple-select.png'  %>) no-repeat 100% -22px, -moz-linear-gradient(center bottom, white 85%, #eeeeee 99%) !important;
+    background: url(<%= image_path 'multiple-select.png'  %>) no-repeat 100% -22px, -o-linear-gradient(bottom, white 85%, #eeeeee 99%) !important;
+    background: url(<%= image_path 'multiple-select.png'  %>) no-repeat 100% -22px, -ms-linear-gradient(top, #ffffff 85%, #eeeeee 99%) !important;
+    background: url(<%= image_path 'multiple-select.png'  %>) no-repeat 100% -22px, linear-gradient(top, #ffffff 85%, #eeeeee 99%) !important;
+}
+
+.MultipleSelector-FormField select, .MultipleDaysSelector-FormField select{
+  width: 100% !important;
+  outline: none !important;
+}
+
+.MultipleSelector-FormField .ms-choice, .MultipleDaysSelector-FormField .ms-choice{
+    @include border-radius($element-border-radius);
+    font-size: $almostNormalSize;
+    width: 100%;
+    height: 34px;
+    span{
+      padding: 4px 8px;
+    }
+    div{
+      top:  4px;
+    }
+}
+
+.MultipleSelector-FormField .ms-parent, .MultipleDaysSelector-FormField .ms-parent{
+    width: 100% !important;
+}
+
+.ms-parent{
+  width: 100% !important;
+} 
