--- a/assets/stylesheets/scss/_pard.erb.scss
+++ b/assets/stylesheets/scss/_pard.erb.scss
@@ -2388,9 +2388,16 @@ select:-moz-focusring { color: transparent;
     font-size: $almostNormalSize;
     min-height: 11rem;
     padding: .5rem;
-    p{
-      line-height: 1.2rem;
+    p, li, ul, h1, h2, h3, h4, h5, h6, span, div{
+      line-height: 1.2rem !important;
       margin-bottom: 0.6rem;
+      font-size: $almostNormalSize !important;
+      color:  black !important;
+      font-family: Arial, "Helvetica Neue", Helvetica, Roboto !important;
+    }
+    a{
+      font-size: $almostNormalSize !important;
+      font-family: Arial, "Helvetica Neue", Helvetica, Roboto !important;
     }
   }
 }
