cacheInput with arguments

--- a/assets/stylesheets/scss/_pard.erb.scss
+++ b/assets/stylesheets/scss/_pard.erb.scss
@@ -2652,8 +2652,8 @@ select:-moz-focusring { color: transparent;
   }
 }
 
-.InputCache-InputCache{
-  margin-bottom: .5rem !important;
+.InputCache-showCache{
+  margin-top: .5rem !important;
 }
 
 /*==============================================
