check added in timeoutAlert + typos corrected in orfheo description

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -7,7 +7,7 @@
         <meta http-equiv="x-ua-compatible" content="ie=edge">
 
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <meta name="description" content="Muestra y descrubre proyectos, lanza tus convocatorias, participa en grandes eventos. Crea en red: tu comunidad cultural te llama." />
+        <meta name="description" content="Muestra y descubre proyectos, lanza tus convocatorias, participa en grandes eventos. Crea en red: tu comunidad cultural te llama." />
         <meta name="keywords" content="orfheo, convocatoria, eventos, organizaciones, festival, federaciones, ong, empresas, instituciones, valencia, arte, artistas, proyectos, espacios, asociaciones, música, taller, artes, escénicas, exposición, comunidad, cultura, plataforma, social, network, gestión, cultural, community, futuro, cambio, herramienta, alternativa, sostenibilidad, creación, colaboración, portfolio, vetrina, enlaces, red, colores" />
         <meta name="robots" content="index, follow" />
         <meta name="author" content="orfheo community project" />
@@ -19,7 +19,7 @@
         <meta property="og:url" content="http://www.orfheo.org"/>
         <meta property="og:site_name" content="orfheo"/>
         <meta property="og:type" content="website"/>
-        <meta property="og:description" content="Muestra y descrubre proyectos, lanza tus convocatorias, participa en grandes eventos. Crea en red: tu comunidad cultural te llama."/>
+        <meta property="og:description" content="Muestra y descubre proyectos, lanza tus convocatorias, participa en grandes eventos. Crea en red: tu comunidad cultural te llama."/>
 
         <!-- favicon -->
         <link rel='shortcut icon' href="<%= image_path 'logo_favicon.ico' %>" type='image/png'/>
