--- a/assets/stylesheets/scss/_pages.erb.scss
+++ b/assets/stylesheets/scss/_pages.erb.scss
@@ -966,10 +966,13 @@ Profile Section
 }
 
 .information-info{
-  p, li, ul, h1, h2, h3, h4, h5, h6, span, div{
+  p, li, ul, h1, h2, h3, h4, h5, h6, span, div, strong, span{
     font-size: $almostNormalSize !important;
     font-family: Arial, "Helvetica Neue", Helvetica, Roboto !important;
     color:  black !important;
+    margin-bottom: 0.6rem !important;
+    line-height: 1.4rem !important;
+    text-align: left !important;
   }
   a{
     font-size: $almostNormalSize !important;
