new structure to load forms

--- a/assets/stylesheets/scss/_pard.erb.scss
+++ b/assets/stylesheets/scss/_pard.erb.scss
@@ -2631,7 +2631,7 @@ select:-moz-focusring { color: transparent;
   font-size: $smallSize;
 }
 
-.Selector-FormField{
+.Selector-FormField, .CategorySelector-FormField{
   select{
     height: 34px;
   }
