--- a/assets/stylesheets/scss/_pages.erb.scss
+++ b/assets/stylesheets/scss/_pages.erb.scss
@@ -3306,6 +3306,143 @@ a.participant-program-card-own {
 }
 
 /*===============================================
+SERVICES PAGE
+================================================*/
+.mainServicesPage{
+  padding: 0;
+  width: 100vw;
+}
+
+.serviceSection{
+  height: 33rem;
+  h3 {
+    font-weight: bold;
+    line-height: 2.5rem;
+    margin-bottom: 2rem;
+  }
+  p{
+    line-height: 1.4rem;
+    color: $grey-4;
+  }
+  .numberText{
+    font-weight: bold;
+    font-size: 3rem;
+    margin-right: 1.5rem;
+    display: inline;
+  }
+  .textContainer{
+    width: 22rem;
+  }
+}
+
+.leftServiceSection, .rightServiceSection{
+  display: inline-block;
+  width: 50%;
+/*   height: 100%;
+ */  vertical-align: middle;
+  position: relative;
+}
+
+.rightServiceSection{
+  .textContainer{
+    float: right;
+  }
+}
+
+.initialSectionServicePage{
+  height: 35rem;
+  background: white;
+  .isContainer {
+    height: 100%;
+    padding: 3rem 0;
+  }
+}
+
+.background-initialSection{
+  background-image: url(<%= image_path 'connectingcircles.png' %>);
+  width: 100%;
+  height: 28rem;
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
+  position: relative;
+}
+
+.text-initialSection{
+  width: 100%;
+  text-align: center;
+  position: absolute;
+  top: 10rem;
+  h3 {
+    font-weight: bold;
+  }
+  p{
+    line-height: 1.4rem;
+  }
+}
+
+.eventImageServicePage{
+  background-image: url(<%= image_path 'imagen_evento_servicios.png' %>);
+  width: 36rem;
+  height: 19rem;
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
+  margin-left: -5rem;
+}
+
+.callImageServicePage{
+  background-image: url(<%= image_path 'formu.jpg' %>);
+  width: 26rem;
+  height: 19rem;
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
+}
+
+.eventSectionServicePage{
+  background: #fef4e7;
+  .rightServiceSection{
+    padding: 7rem 0;
+  }
+}
+
+.callSectionServicePage{
+  background:#fefce5;
+  .leftServiceSection{
+    padding: 7rem 0;
+  }
+}
+
+.managerSectionServicePage{
+  background: #e3fad9;
+}
+
+.programSectionServicePage{
+  background: #d6faf4;
+}
+
+.publishSectionServicePage{
+  background: #d8f0fa;
+}
+
+.publicSectionServicePage{
+  background: #e8e4f3;
+}
+
+.otherSectionServicePage{
+  background: #fceaf8;
+}
+
+.priceSectionServicePage{
+  background: #fce1e1;
+}
+
+.finalSectionServicePage{
+  background: black;
+  height: 35rem;
+}
+
+
+
+/*===============================================
 CROWDFUNDING
 ================================================*/
 
