--- a/assets/stylesheets/scss/_pages.erb.scss
+++ b/assets/stylesheets/scss/_pages.erb.scss
@@ -3333,18 +3333,28 @@ SERVICES PAGE
   .textContainer{
     width: 22rem;
   }
+  .sign{
+    font-size: 4.5rem;
+  }
+  .otherTextContainer{
+      width: 24rem;
+  }
 }
 
 .leftServiceSection, .rightServiceSection{
   display: inline-block;
   width: 50%;
-/*   height: 100%;
- */  vertical-align: middle;
+  vertical-align: middle;
   position: relative;
 }
 
+.serviceSection .mobileText{
+  float: right;
+  width: 18.5rem;
+}
+
 .rightServiceSection{
-  .textContainer, .managerImageServicePage{
+  .textContainer, .managerImageServicePage, .otherTextContainer{
     float: right;
   }
 }
@@ -3421,6 +3431,42 @@ SERVICES PAGE
   background-size: 100% 100%;
 }
 
+.mobileImage, .mobileImage2, .mobileImage_d, .mobileImage_f{
+  width: 11rem;
+  height: 19.6rem;
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
+  position: absolute;
+}
+
+.mobileImage{
+  background-image: url(<%= image_path 'cell.png' %>);
+  left: -1.5rem;
+}
+
+.mobileImage2{
+  background-image: url(<%= image_path 'cell2.png' %>);
+  left: 8.2rem;
+}
+
+.mobileImage_d{
+  background-image: url(<%= image_path 'celld.png' %>);
+  left: 17.9rem;
+}
+
+.mobileImage_f{
+  background-image: url(<%= image_path 'cellf.png' %>);
+  left: 27.6rem;
+}
+
+.mobileImage, .mobileImage_d{
+  top: 3rem;
+}
+
+.mobileImage2, .mobileImage_f{
+  top: -3rem;
+}
+
 .eventSectionServicePage{
   background: #fef4e7;
   .rightServiceSection{
@@ -3456,16 +3502,27 @@ SERVICES PAGE
   }
 }
 
-.publicSectionServicePage{
+.mobileSectionServicePage{
   background: #e8e4f3;
+  padding: 6.5rem 0;
+  .pard-grid{
+    position: relative;
+  }
 }
 
 .otherSectionServicePage{
   background: #fceaf8;
+  .leftServiceSection, .rightServiceSection{
+    vertical-align: top;
+  }
+  padding:4.5rem 0;
 }
 
 .priceSectionServicePage{
   background: #fce1e1;
+  .pard-grid{
+    position: relative;
+  }
 }
 
 .finalSectionServicePage{
