create production and pastEventArtist in space profile

--- a/assets/stylesheets/scss/_pard.erb.scss
+++ b/assets/stylesheets/scss/_pard.erb.scss
@@ -1679,6 +1679,7 @@ HEADER
     }
     a, button{
       color: white;
+      padding: .3rem 0;
     }
     a:hover, button:hover{
       color: $grey-2;
@@ -2413,7 +2414,7 @@ select:-moz-focusring { color: transparent;
     font-size: $almostNormalSize;
     min-height: 11rem;
     padding: .5rem;
-    p, li, ul, h1, h2, h3, h4, h5, h6, span, div{
+    p, li, ul, h1, h2, h3, h4, h5, h6, span, div, strong, span{
       line-height: 1.2rem !important;
       margin-bottom: 0.6rem;
       font-size: $almostNormalSize !important;
