--- a/assets/stylesheets/scss/_pard.erb.scss
+++ b/assets/stylesheets/scss/_pard.erb.scss
@@ -244,9 +244,10 @@ Grid and Bar
   /* cursor: pointer; */
   background-image: url(<%= image_path 'lettering_white_s.png' %>);
   width: 42px;
-  height: 14px;
+  height: 15.5px;
   background-repeat: no-repeat;
   background-size: 100% 100%;
+  vertical-align: -1.5px;
 }
 
 
