services page darft completed

--- a/assets/stylesheets/scss/_pages.erb.scss
+++ b/assets/stylesheets/scss/_pages.erb.scss
@@ -3523,6 +3523,14 @@ SERVICES PAGE
   .pard-grid{
     position: relative;
   }
+  .text-initialSection{
+    top: 8rem;
+  }
+  .pricingText{
+    text-decoration: underline;
+    color:  #DE5021;
+    margin-bottom: 2rem;
+  }
 }
 
 .finalSectionServicePage{
