--- a/assets/stylesheets/scss/_pages.erb.scss
+++ b/assets/stylesheets/scss/_pages.erb.scss
@@ -1915,6 +1915,15 @@ div.dataTables_wrapper div.dataTables_filter{
   font-size: $almostNormalSize;
 }
 
+.notAllowedProfile{
+  opacity: .5;  
+}
+
+.notAllowedProfile:hover{
+  cursor: default;
+  box-shadow: rgba(10, 10, 10, 0.2) 0px 1px 3px 0px !important;
+  border: 1px solid rgba(10, 10, 10, 0.2) !important;
+}
 
 .success-icon-check-call-manager{
   color: $green-pard;
