call forms and manager charge correctly with new database

--- a/assets/stylesheets/scss/_pages.erb.scss
+++ b/assets/stylesheets/scss/_pages.erb.scss
@@ -3008,6 +3008,11 @@ a.participant-program-card-own {
   background: $green-pard
 }
 
+.active:hover{
+  font-weight: bold;
+  background: rgba(76,182,50,.8);
+}
+
 .filter-checkbox-event-page{
   cursor: pointer;
   margin-bottom: -0.2rem;
