--- a/assets/stylesheets/scss/_pages.erb.scss
+++ b/assets/stylesheets/scss/_pages.erb.scss
@@ -3336,8 +3336,12 @@ SERVICES PAGE
   h3 {
     font-weight: bold;
     margin-bottom: 2rem;
+    line-height: 2.3rem;
+    @include breakpoint(large){
+      font-size: 2.1rem;
+    }
     @include breakpoint(small down){
-      line-height: 2rem;
+      line-height: 1.8rem;
     }
   }
   p{
@@ -3347,8 +3351,12 @@ SERVICES PAGE
   .numberText{
     font-weight: bold;
     font-size: 3rem;
-    margin-right: 1.5rem;
+    margin-right: 1.1rem;
     display: inline;
+    @include breakpoint (small down){
+      font-size: 2rem;
+      margin-right: .9rem;
+    }
   }
   .textContainer{
     width: 22rem;
@@ -3381,10 +3389,13 @@ SERVICES PAGE
     bottom: 0;
     position: absolute;
     right: 0;
+    @include breakpoint (medium down){
+      bottom: -.5rem;
+    }
   }
   @include breakpoint (medium down){
     height: auto;
-    padding: 3rem 1rem;
+    padding: 4rem 1rem;
     text-align: center;
   }
 }
@@ -3422,7 +3433,7 @@ SERVICES PAGE
   }
 }
 
-.initialSectionServicePage, .finalSectionServicePage{
+.initialSectionServicePage{
   height: 35rem;
   background: white;
   .isContainer {
@@ -3456,7 +3467,7 @@ SERVICES PAGE
   width: 100%;
   text-align: center;
   position: absolute;
-  top: 10rem;
+  top: 9rem;
   h3 {
     font-weight: bold;
   }
@@ -3525,13 +3536,17 @@ SERVICES PAGE
 
 .managerImageServicePage{
   background-image: url(<%= image_path 'prop.png' %>);
-  width: 28rem;
-  height: 18.8rem;
+  width: 30.5rem;
+  height: 18.5rem;
   background-repeat: no-repeat;
   background-size: 100% 100%;
   @include breakpoint(medium down){
     @include horizontal-center;
     position: relative;
+  }
+  @include breakpoint(small down){
+    width: 90vw;
+    height: 55vw;
   }
 }
 
@@ -3662,7 +3677,7 @@ SERVICES PAGE
     position: relative;
   }
   @include breakpoint (medium down){
-    padding: 3rem 1rem;
+    padding: 4rem 1rem;
   }
 }
 
@@ -3686,16 +3701,39 @@ SERVICES PAGE
     top: 8rem;
   }
   .pricingText{
-    text-decoration: underline;
+    /* text-decoration: underline; */
     color:  #DE5021;
     margin-bottom: 2rem;
+    .month{
+      text-transform: uppercase;
+      font-size: .85rem;
+      margin-left: .1rem;
+      vertical-align: .5rem;
+    }
   }
 }
 
 .finalSectionServicePage{
   background: black;
+  padding-bottom: 1rem;
+  .finalText{
+    color: $blue-pard;
+    line-height: 1.2rem;
+    font-size: $almostNormalSize;
+    text-align: justify;
+    margin-bottom: 0;
+  }
+  .finalSectionBackground{
+    background-image: url(<%= image_path 'culturaluniverse.png' %>);
+    width: 61.5rem;
+    height: 28.5rem;
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+  }
+  @include breakpoint (medium down){
+    padding: 0 1rem;
+  }
 }
-
 
 
 /*===============================================
