--- a/views/services.erb
+++ b/views/services.erb
@@ -1,3 +1,3 @@
 <script>
-  Pard.Services(<%= status %>, "<%= video_path 'demo_manager_orfheo.mp4' %>");
+  Pard.Services(<%= status %>);
 </script>
