go up buttom in profiles engine and program manager

--- a/assets/stylesheets/scss/_pard.erb.scss
+++ b/assets/stylesheets/scss/_pard.erb.scss
@@ -728,7 +728,7 @@ button{
   bottom: 2rem;
   font-size: 1.5rem;
   position: fixed;
-  right: 15%;
+  right: 1rem;
   z-index: 999;
   color: rgba(0,0,0,0.5);
 }
