host subcategory in gmap and close button in long popup

--- a/assets/stylesheets/scss/_pard.erb.scss
+++ b/assets/stylesheets/scss/_pard.erb.scss
@@ -863,6 +863,16 @@ a.navigation-btn-callPage{
   background: rgba(56, 133, 255, 0.8);
 }
 
+
+.close-button-bottom-popup{
+  text-align: right;
+  font-size: 14px;
+  margin-top: 1.5rem;
+  button{
+    text-transform: capitalize;
+  }
+}
+
 /*===============================================
 COMPONENTS
 ================================================*/
