width of space column header fixed

--- a/assets/stylesheets/scss/_pages.erb.scss
+++ b/assets/stylesheets/scss/_pages.erb.scss
@@ -2320,7 +2320,7 @@ Program Manager Tab
   background-color: #dedede;
   height: 2.5rem;
   text-align: center;
-  width: 174px;
+  width: 100%;
   z-index: 1;
   position: absolute;
 }
