icons format resourse uniformed

--- a/assets/stylesheets/scss/_pages.erb.scss
+++ b/assets/stylesheets/scss/_pages.erb.scss
@@ -1330,9 +1330,9 @@ Production Section
 
 .iconCategory-select2{
   position: relative;
-  margin-right: 0.3rem;
+  margin-left: 0.5rem;
   vertical-align: middle;
-  width: 2rem;
+  /* width: 2rem; */
   display: inline-block;
   text-align: center;
   font-size:  1rem;
@@ -3018,7 +3018,7 @@ a.participant-program-card-own {
 }
 
 .participant-category-icon{
-  margin-right: 0.3rem;
+  margin-left: .4rem;
 }
 
 
