--- a/assets/stylesheets/scss/_pard.erb.scss
+++ b/assets/stylesheets/scss/_pard.erb.scss
@@ -726,7 +726,7 @@ button{
 
 .goUpBtn-program-event-page{
   bottom: 2rem;
-  font-size: 1.5rem;
+  font-size: 2rem;
   position: fixed;
   right: 1rem;
   z-index: 999;
@@ -2957,9 +2957,10 @@ li.select2-selection__choice{
 
 .search-input{
   @include breakpoint(large){ 
-    width: 100%;
-    padding-left:3.8rem;
-    padding-right: 3.8rem;
+    width: 37.6rem;
+    /* padding-left:3.8rem; */
+    margin-left: 3.8rem;
+    position: relative;
   }
 }
 
