class redefined for lang widget

--- a/assets/stylesheets/scss/_pard.erb.scss
+++ b/assets/stylesheets/scss/_pard.erb.scss
@@ -2247,13 +2247,18 @@ FOOTER
   }
 }
 
+.footer-outsider .languagesList-footer{
+  position: inherit;
+}
+
 .languagesList-footer{
-  bottom: 2rem;
+  bottom: -2rem;
   margin-left: 4.4rem;
   background: white;
   padding: .2rem 0;
   width: 4.4rem;
   display: none;
+  position: absolute;
   @include border-radius($element-border-radius);
   li{
     display: block;
