event card img dimension for small screen

--- a/assets/stylesheets/scss/_pard.erb.scss
+++ b/assets/stylesheets/scss/_pard.erb.scss
@@ -1205,8 +1205,10 @@ Event Card
       /* padding: 10vw 4% 0 4%; */
     }
     .imgContainer-eventCard{
-      width: 32%;
-      height: auto;
+/*       width: 32%;
+      height: auto; */
+      width: 29vw;
+      height: 41vw;
       margin: 10px 0 10px 4%;
     }
     .info-eventCard{
